--- a/package.json
+++ b/package.json
@@ -14,5 +14,15 @@
   "type": "module",
   "workspaces": [
     "src/cross_chain_asset_swap_frontend"
-  ]
+  ],
+  "dependencies": {
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.3",
+    "styled-components": "^6.1.19"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
+  }
 }
